# demo-googletest

./: .gitignore  CMakeLists.txt  README.md  Tugabudoire.cpp  Tugabudoire.h  main.cpp
tests/: CMakeLists.txt  test_tugabudoire.cpp
